<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.labs.acw.PuzzleFinish">

    <Button
        android:id="@+id/Win_MainMenu_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="@string/main_menu" />

    <TextView
        android:id="@+id/win_HighScore_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/win_YourScore_Text"
        android:layout_alignRight="@+id/win_YourScore_Text"
        android:layout_below="@+id/win_Puzzle_Name_Text"
        android:layout_marginTop="20dp"
        android:text="@string/highscore" />

    <TextView
        android:id="@+id/win_Puzzle_Name_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/win_YourScore_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/win_HighScore_Text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/your_score" />

    <Button
        android:id="@+id/win_RetryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Win_MainMenu_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/retry" />
</RelativeLayout>